add contact, post covid, image post, register, login, some css fix...

--- a/template/register.html
+++ b/template/register.html
@@ -1,10 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="../assets/css/responsive.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"/>
 </head>
-<body>
-
+<body class="register-body">
+<div class="logo-thecup">
+    <img src="../resources/img/logo-login-register.svg" alt="">
+</div>
+<div class="register-holder">
+    <div class="upper">
+        <p class="reg-title">Đăng ký</p>
+        <div class="oauth-button">
+            <button class="btn btn-primary btn-facebook">
+                <img src="../resources/img/Button/facebook.svg" alt="">
+                <span>Facebook</span>
+            </button>
+            <button class="btn btn-outline-success btn-google">
+                <img src="../resources/img/Button/google.svg" alt="">
+                <span>Google</span>
+            </button>
+        </div>
+        <div class="divider"></div>
+        <p class="username">Họ và tên</p>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Họ và tên viết có dấu" aria-label="Recipient's username with two button addons">
+        </div>
+        <p class="email">Email</p>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="email@gmail.com" aria-label="Recipient's username with two button addons">
+        </div>
+        <p class="password">Mật khẩu</p>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Mật khẩu của bạn" aria-label="Recipient's username with two button addons">
+        </div>
+        <button class="btn btn-primary btn-reg">Đăng ký</button>
+    </div>
+    <div class="lower">
+        <div class="login-block">
+            <span class="text">Bạn đã có tài khoản?</span>
+            <a href="">
+                <span class="login">Đăng nhập ngay</span>
+            </a>
+        </div>
+    </div>
+</div>
+<script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/main.js"></script>
+<script src="../assets/js/bootstrap.bundle.min.js"></script>
+<script src="../assets/owlcarousel/owl.carousel.min.js"></script>
+<script src="https://kit.fontawesome.com/16985780f3.js" crossorigin="anonymous"></script>
 </body>
 </html>
