--- a/template/image_post.html
+++ b/template/image_post.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"/>
 </head>
-<body class="contact-body">
+<body class="image-post-body">
 <!--Navigator-bar-->
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
@@ -99,70 +99,218 @@
 <div class="category-banner">
   <div class="text-block">
     <p class="category">Chuyên mục</p>
-    <p class="eco">Liên hệ</p>
+    <p class="eco">Sống</p>
   </div>
 </div>
 <!--Category-banner-end-->
-<!--Contact-start-->
-<div class="contact-holder">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5 contact-left">
-        <div class="phone-number">
-          <p class="title">Bạn cần trợ giúp? Liên hệ chúng tôi</p>
-          <p class="number">0924 563 111</p>
-          <p class="text phone-text">Thứ 2 đến thứ 7 từ 9:00 đến 18:00</p>
-        </div>
-        <div class="email">
-          <p class="title">Chăm sóc khách hàng</p>
-          <p class="mail">contact@thecup.vn</p>
-          <p class="text">Nếu bạn có bất cứ câu hỏi nào!
-          Hãy gửi email và chúng tôi sẽ phản hồi nó sớm nhất có thể</p>
-        </div>
-        <div class="address">
-          <p class="title">Chăm sóc khách hàng</p>
-          <p class="addr">contact@thecup.vn</p>
-          <p class="text">Nếu bạn có bất cứ câu hỏi nào!
-          Hãy gửi email và chúng tôi sẽ phản hồi nó sớm nhất có thể</p>
+<div class="row image-post-holder">
+  <div class="col-md-3">
+    <div class="image-grid-holder">
+      <div class="upper">
+        <p class="author-name">Chu Thụy Nguyên</p>
+        <p class="album-name">Album thiên nhiên kỳ thú quanh ta</p>
+        <div class="date-and-rating">
+          <p class="date">12/05/2021</p>
+          <div class="rating-holder">
+            <p class="text">Đánh giá</p>
+            <span class="material-icons material-icons-outlined">
+            star
+            </span>
+            <span class="material-icons material-icons-outlined">
+                        star
+                        </span>
+            <span class="material-icons material-icons-outlined">
+                        star
+                        </span>
+            <span class="material-icons material-icons-outlined">
+                        star
+                        </span>
+            <span class="material-icons material-icons-outlined">
+                        star_half
+                        </span>
+            <span class="quantity">(23)</span>
+          </div>
         </div>
       </div>
-      <div class="col-md-7 contact-right">
-        <p class="title">
-          Hãy liên hệ với chúng tôi!
-        </p>
+      <div class="img-grid">
         <div class="row">
-          <div class="col-md-6">
-            <p class="input-name">Họ và tên</p>
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Họ và tên của bạn" aria-label="Recipient's username with two button addons">
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-1.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-2.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-3.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-4.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-5.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-6.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-7.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-8.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-9.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-10.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-11.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-12.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-13.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-14.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-15.png" alt="">
+          </div>
+          <div class="col-md-3 img-block">
+            <img src="../resources/img/grid/grid-12.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="comment">
+        <div class="title">
+          <p>Bình luận</p>
+        </div>
+        <div class="comment-block">
+          <div class="row">
+            <div class="col-md-2">
+              <div class="user-avatar"></div>
             </div>
-            <p class="input-name">Điện thoại</p>
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Số điện thoại liên hệ" aria-label="Recipient's username with two button addons">
+            <div class="col-md-10">
+              <p class="user-name">tranvanan122</p>
+              <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
+                hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
+              <p class="comment-date-time">12/05/2021 20:12</p>
             </div>
           </div>
-          <div class="col-md-6">
-            <p class="input-name">Email liên hệ</p>
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Email của bạn" aria-label="Recipient's username with two button addons">
+          <button class="btn btn-outline-secondary dropdown-toggle comment-block-button fas fa-ellipsis-v"
+                  type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="#">Thích</a></li>
+            <li><a class="dropdown-item" href="#">Không thích</a></li>
+            <li><a class="dropdown-item" href="#">Báo cáo</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Ẩn</a></li>
+          </ul>
+        </div>
+        <div class="comment-block">
+          <div class="row">
+            <div class="col-md-2">
+              <div class="user-avatar"></div>
             </div>
-            <p class="input-name">Chủ đề</p>
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Chủ đề" aria-label="Recipient's username with two button addons"/>
+            <div class="col-md-10">
+              <p class="user-name">phanvantai123</p>
+              <p class="comment-text">Đã từng là quản lý và đã thất bại. Thật sự là không hề dễ. Cảm ơn
+                tác giá đã có một bài viết rất ý nghĩa và sâu sắc</p>
+              <p class="comment-date-time">12/05/2021 20:12</p>
+            </div>
+          </div>
+          <button class="btn btn-outline-secondary dropdown-toggle comment-block-button fas fa-ellipsis-v"
+                  type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="#">Thích</a></li>
+            <li><a class="dropdown-item" href="#">Không thích</a></li>
+            <li><a class="dropdown-item" href="#">Báo cáo</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Ẩn</a></li>
+          </ul>
+        </div>
+        <div class="post-comment">
+          <div class="row">
+            <div class="col-md-2">
+              <div class="user-avatar"></div>
+            </div>
+            <div class="col-md-10">
+              <div class="form-floating">
+                                <textarea class="form-control" placeholder="Leave a comment here"
+                                          id="floatingTextarea"></textarea>
+                <label for="floatingTextarea">Để lại bình luận của bạn</label>
+              </div>
+              <button class="btn btn-primary">Đăng bình luận</button>
             </div>
           </div>
         </div>
-        <p class="input-name">Nội dung</p>
-        <div class="form-floating">
-          <textarea class="form-control" placeholder="Leave a comment here" id="commentTextarea" style="height: 200px"></textarea>
-          <label for="commentTextarea">Nhập nội dung</label>
-        </div>
-        <button class="btn btn-primary">Gửi</button>
       </div>
     </div>
   </div>
-</div>
-<!--Contact-end-->
+  <div class="col-md-9">
+    <!--Life-Carousel-start-->
+    <div id="life-carousel" class="carousel slide carousel-fade life-carousel-holder" data-bs-ride="none">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#life-carousel" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#life-carousel" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#life-carousel" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Tôi lựa chọn du lịch thay vì tiết kiệm tiền cực khổ</h5>
+            <p>Ngày 24 tháng 5, 2020</p>
+          </div>
+          <div class="item-pos">
+            <p>1/3</p>
+          </div>
+          <div class="carousel-gradient-bottom"></div>
+        </div>
+        <div class="carousel-item">
+          <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Tôi lựa chọn cực khổ thay vì tiết kiệm tiền đi đi du lịch</h5>
+            <p>Ngày 24 tháng 5, 2020</p>
+          </div>
+          <div class="item-pos">
+            <p>2/3</p>
+          </div>
+          <div class="carousel-gradient-bottom"></div>
+        </div>
+        <div class="carousel-item">
+          <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Tôi thà tiết kiệm tiền còn hơn đi du lịch</h5>
+            <p>Ngày 24 tháng 5, 2020</p>
+          </div>
+          <div class="item-pos">
+            <p>3/3</p>
+          </div>
+          <div class="carousel-gradient-bottom"></div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#life-carousel" data-bs-slide="prev">
+        <span class="material-icons material-icons-outlined"> chevron_left </span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#life-carousel" data-bs-slide="next">
+        <span class="material-icons material-icons-outlined"> chevron_right </span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!--Life-Carousel-end-->
+  </div>
 </div>
 <!--Footer-start-->
 <footer class="footer-holder">
