--- a/template/register.html
+++ b/template/register.html
@@ -57,6 +57,14 @@
         </div>
     </div>
 </div>
+<div class="exit-button">
+    <div class="border">
+        <span class="material-icons material-icons-outlined">
+            close
+        </span>
+    </div>
+    <p>Đóng</p>
+</div>
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/main.js"></script>
 <script src="../assets/js/bootstrap.bundle.min.js"></script>
