--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2762,16 +2762,34 @@ p{
   }
 }
 
-//Register Page
-.register-body{
+//Register & Login Page
+.login-body{
+  .register-holder{
+    height: 550px!important;
+    .upper{
+      padding: 40px 40px 40px 40px!important;
+    }
+    .forgot-password{
+      margin-top: 20px;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 16px;
+      color: #2270E8;
+      text-align: center;
+    }
+  }
+}
+.register-body,.login-body{
   background-color: #E8EFFA;
+  position: relative;
+  padding-top: 144px;
   .logo-thecup{
     display: block;
     width: 198px;
     height: 60px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 144px;
   }
   .register-holder{
     width: 450px;
@@ -2784,7 +2802,7 @@ p{
     box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.07);
     border-radius: 5px;
     .upper{
-      padding: 40px 40px 45px 40px;
+      padding: 40px 40px 54px 40px;
       .reg-title{
         text-align: center;
         font-style: normal;
@@ -2891,6 +2909,10 @@ p{
       }
       .input-group{
         margin-top: 5px;
+        .form-control{
+          font-size: 14px;
+          color: #B2B2B2;
+        }
       }
       .btn-reg{
         width: 100%;
@@ -2933,4 +2955,30 @@ p{
       }
     }
   }
+  .exit-button{
+    width: 48px;
+    text-align: center;
+    position: absolute;
+    top: 52px;
+    right: 90px;
+    .border{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 48px;
+      height: 48px;
+      border-radius: 25px;
+      border: 1px solid #767676;
+      box-sizing: border-box;
+    }
+    p{
+      margin-top: 8px;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 15px;
+      line-height: 18px;
+      color: #767676;
+    }
+  }
 }
+
