--- a/template/login.html
+++ b/template/login.html
@@ -42,7 +42,9 @@
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Mật khẩu của bạn" aria-label="Recipient's username with two button addons">
         </div>
-        <button class="btn btn-primary btn-reg">Đăng nhập</button>
+        <a href="/thecup/template/my_account.html">
+            <button class="btn btn-primary btn-reg">Đăng nhập</button>
+        </a>
         <a href="">
             <p class="forgot-password">Bạn quên mật khẩu?</p>
         </a>
@@ -50,19 +52,21 @@
     <div class="lower">
         <div class="login-block">
             <span class="text">Bạn chưa có tài khoản?</span>
-            <a href="">
+            <a href="/thecup/template/register.html">
                 <span class="login">Đăng ký ngay</span>
             </a>
         </div>
     </div>
 </div>
 <div class="exit-button">
-    <div class="border">
+    <a href="/thecup/">
+        <div class="border">
         <span class="material-icons material-icons-outlined">
             close
         </span>
-    </div>
-    <p>Đóng</p>
+        </div>
+        <p>Đóng</p>
+    </a>
 </div>
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/main.js"></script>
