--- a/template/register.html
+++ b/template/register.html
@@ -51,19 +51,21 @@
     <div class="lower">
         <div class="login-block">
             <span class="text">Bạn đã có tài khoản?</span>
-            <a href="">
+            <a href="/thecup/template/login.html">
                 <span class="login">Đăng nhập ngay</span>
             </a>
         </div>
     </div>
 </div>
 <div class="exit-button">
-    <div class="border">
+    <a href="/thecup/">
+        <div class="border">
         <span class="material-icons material-icons-outlined">
             close
         </span>
-    </div>
-    <p>Đóng</p>
+        </div>
+        <p>Đóng</p>
+    </a>
 </div>
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/main.js"></script>
