--- a/template/my_account.html
+++ b/template/my_account.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"/>
 </head>
-<body class="contact-body">
+<body class="my-account-body">
 <!--Navigator-bar-->
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
@@ -100,8 +100,8 @@
 <!--Category-banner-start-->
 <div class="category-banner">
   <div class="text-block">
-    <p class="category">Chuyên mục</p>
-    <p class="eco">Liên hệ</p>
+    <p class="category">Trang</p>
+    <p class="eco">Tài khoản của tôi</p>
   </div>
 </div>
 <!--Category-banner-end-->
@@ -109,57 +109,75 @@
 <div class="contact-holder">
   <div class="container">
     <div class="row">
-      <div class="col-md-5 contact-left">
-        <div class="phone-number">
-          <p class="title">Bạn cần trợ giúp? Liên hệ chúng tôi</p>
-          <p class="number">0924 563 111</p>
-          <p class="text phone-text">Thứ 2 đến thứ 7 từ 9:00 đến 18:00</p>
-        </div>
-        <div class="email">
-          <p class="title">Chăm sóc khách hàng</p>
-          <p class="mail">contact@thecup.vn</p>
-          <p class="text">Nếu bạn có bất cứ câu hỏi nào!
-          Hãy gửi email và chúng tôi sẽ phản hồi nó sớm nhất có thể</p>
-        </div>
-        <div class="address">
-          <p class="title">Chăm sóc khách hàng</p>
-          <p class="addr">contact@thecup.vn</p>
-          <p class="text">Nếu bạn có bất cứ câu hỏi nào!
-          Hãy gửi email và chúng tôi sẽ phản hồi nó sớm nhất có thể</p>
-        </div>
-      </div>
-      <div class="col-md-7 contact-right">
+      <div class="col-md-7 right">
         <p class="title">
-          Hãy liên hệ với chúng tôi!
+          Thông tin cá nhân
         </p>
+        <div class="upload-avatar">
+          <p class="text">Ảnh đại diện</p>
+          <div class="upload-button">
+            <img src="../resources/img/user-img/avatar-icon.svg" alt="">
+          </div>
+          <input type="file" class="input" accept="image/*">
+        </div>
         <div class="row">
           <div class="col-md-6">
             <p class="input-name">Họ và tên</p>
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Họ và tên của bạn" aria-label="Recipient's username with two button addons">
             </div>
-            <p class="input-name">Điện thoại</p>
+            <p class="input-name">Số điện thoại</p>
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Số điện thoại liên hệ" aria-label="Recipient's username with two button addons">
             </div>
           </div>
           <div class="col-md-6">
-            <p class="input-name">Email liên hệ</p>
+            <p class="input-name">Email</p>
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Email của bạn" aria-label="Recipient's username with two button addons">
             </div>
-            <p class="input-name">Chủ đề</p>
+            <p class="input-name">Ngày sinh</p>
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Chủ đề" aria-label="Recipient's username with two button addons"/>
             </div>
           </div>
         </div>
-        <p class="input-name">Nội dung</p>
-        <div class="form-floating">
-          <textarea class="form-control" placeholder="Leave a comment here" id="commentTextarea" style="height: 200px"></textarea>
-          <label for="commentTextarea">Nhập nội dung</label>
+        <div class="margin-top"></div>
+        <p class="title">
+          Thông tin tài khoản
+        </p>
+        <div class="row">
+          <div class="col-md-6">
+            <p class="input-name">Mật khẩu</p>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Mật khẩu mới phải bao gồm chữ cái đầu viết hoa" aria-label="Recipient's username with two button addons">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <p class="input-name">Nhập lại mật khẩu</p>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Nhập lại mật khẩu mới" aria-label="Recipient's username with two button addons">
+            </div>
+          </div>
         </div>
-        <button class="btn btn-primary">Gửi</button>
+        <button class="btn btn-primary">Cập nhật thông tin</button>
+      </div>
+      <div class="col-md-5 left">
+        <div class="text-head">
+          <p class="text">thông tin gói sử dụng</p>
+          <a href="">
+            <p class="history">Lịch sử mua gói</p>
+          </a>
+        </div>
+        <div class="trial-card">
+
+        </div>
+        <button class="btn btn-primary">Nâng cấp gói</button>
+        <div class="sixmonth-card">
+
+        </div>
+        <button class="btn btn-primary">Nâng cấp gói</button>
+
       </div>
     </div>
   </div>
