--- a/template/search.html
+++ b/template/search.html
@@ -18,7 +18,7 @@
 <!--Navigator-bar-->
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/thecup/">
       <img class="logo" height="40" src="../resources/img/Logo.svg" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -38,8 +38,7 @@
             Kinh tế
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Phân nhóm 1</a></li>
-            <li><a class="dropdown-item" href="#">Phân nhóm 2</a></li>
+            <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang kinh tế</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
@@ -52,8 +51,7 @@
             Sống
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Phân nhóm 1</a></li>
-            <li><a class="dropdown-item" href="#">Phân nhóm 2</a></li>
+            <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang Sống</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
@@ -66,7 +64,7 @@
             Công nghệ
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Phân nhóm 1</a></li>
+            <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang Sống</a></li>
             <li><a class="dropdown-item" href="#">Phân nhóm 2</a></li>
             <li>
               <hr class="dropdown-divider">
@@ -81,15 +79,19 @@
           <a class="nav-link" href="#">Thể thao</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/thecup/template/search.html">
             <i class="fas fa-search"></i>
           </a>
-
         </li>
       </ul>
       <div class="nav-register">
-        <button class="btn btn-light" type="submit">Đăng nhập</button>
-        <button class="btn btn-light ms-1" type="submit">Đăng ký</button>
+        <a href="/thecup/template/login.html" class="">
+          <button class="btn btn-light" type="submit">Đăng nhập</button>
+        </a>
+        <a href="/thecup/template/register.html" class="">
+          <button class="btn btn-light ms-1" type="submit">Đăng ký</button>
+        </a>
+
       </div>
     </div>
   </div>
