--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1973,6 +1973,7 @@ p{
           display: inline-flex;
           align-items: center;
           justify-content: center;
+          background-color: transparent;
           span{
             font-size: 23px;
           }
