--- a/template/podcast_single.html
+++ b/template/podcast_single.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"/>
+
 </head>
 <body class="podcast-single-body">
 <!--Navigator-bar-->
@@ -288,11 +289,11 @@
                     <span class="material-icons material-icons-outlined">volume_up</span>
                     <span class="material-icons material-icons-outlined">skip_previous</span>
                     <span class="material-icons material-icons-outlined">replay_10</span>
-                    <div class="play-button">
+                    <button class="play-button" id="playBtn">
                        <span class="material-icons material-icons-outlined">
                         play_arrow
                         </span>
-                    </div>
+                    </button>
                     <span class="material-icons material-icons-outlined">forward_10</span>
                     <span class="material-icons material-icons-outlined">skip_next</span>
                 </div>
@@ -428,6 +429,8 @@
     </div>
 </footer>
 <!--Footer-end-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.core.min.js" integrity="sha512-+wqa4/aOL4vwhL637A4p+6epqhUHDqpEfYJa1+PlzlMf908CSOb3xtIeKwZWh5Q0Q/R2nYUKxH4vvcQg+k8KKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/main.js"></script>
 <script src="../assets/js/bootstrap.bundle.min.js"></script>
